# add_subdirectory("RootWidget")
# # if(SWIFT_BUILD)
# #     add_subdirectory("SwiftImport")
# # endif()

add_executable(BasicAppTest BasicAppTest/main.cpp)
add_dependencies(BasicAppTest "OmegaWTK")
if(TARGET_MACOS)
    target_include_directories(BasicAppTest PRIVATE "include" "gte/include" "gte/common/include" "${CMAKE_BINARY_DIR}/deps/icu/include")
    target_compile_definitions(BasicAppTest PRIVATE TARGET_MACOS TARGET_METAL)
    add_dependencies(BasicAppTest "OmegaWTK.framework")
    target_sources(BasicAppTest PRIVATE ${CMAKE_SOURCE_DIR}/target/macos/main.mm)
    target_link_frameworks(BasicAppTest "OmegaWTK")
elseif(TARGET_WIN32)
    target_include_directories(BasicAppTest PRIVATE "include" "gte/include" "gte/common/include" "${CMAKE_BINARY_DIR}/deps/icu/include")
    target_compile_definitions(BasicAppTest PRIVATE WINDOWS_PRIVATE TARGET_WIN32 TARGET_DIRECTX)
    set(EMBED ${CMAKE_SOURCE_DIR}/target/windows/app.exe.manifest)
    configure_file(${CMAKE_SOURCE_DIR}/target/windows/manifest.rc.in ${CMAKE_CURRENT_BINARY_DIR}/res.rc)
    target_sources(BasicAppTest PRIVATE ${CMAKE_SOURCE_DIR}/target/windows/mmain.cpp ${CMAKE_CURRENT_BINARY_DIR}/res.rc)
    target_link_libraries(BasicAppTest PUBLIC OmegaWTK)
    target_link_options(BasicAppTest PRIVATE /SUBSYSTEM:CONSOLE /ENTRY:WinMainCRTStartup /MANIFEST:NO)
endif()
